# Exercicios-IA

./: .gitignore  README.md
Fuzzy/Cpp/: CMakeLists.txt
Fuzzy/Cpp/include/: FuzzyVariable.h  Fuzzyficator.h  MovieRecommendation.h  RestaurantRecommendation.h  TablePrinter.h  Utils.h  VariableGroup.h
Fuzzy/Cpp/src/: CMakeLists.txt  FuzzySearch.cpp  FuzzyVariable.cpp  Fuzzyficator.cpp  MovieRecommendation.cpp  RestaurantRecommendation.cpp  TablePrinter.cpp  Utils.cpp  VariableGroup.cpp
Fuzzy/src/: FuzzyMain.java
Knight/Cpp/: CMakeLists.txt  build.bat
Knight/Cpp/src/: CMakeLists.txt  KnightTour.cpp
Queen/Cpp/: CMakeLists.txt
Queen/Cpp/src/: CMakeLists.txt  QueenProblem.cpp
